--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-docty
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Dining Philosopher's Problem</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    </head>
+    <body>
+        <header>
+            <div class="container">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="How it works.html">How it Works</a>
+                    <a href="About.html">About</a>
+                </nav>
+            </div>
+        </header>
+
+
+        <main>
+            <div class="banner-container">
+                <div class="container">
+                    <div class="content-section">   
+                        <h1 class="anim">Dining Philosopher's Problem</h1>
+                        <p class="anim">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas harum aspernatur amet, officia consectetur deserunt numquam, itaque dolores quis velit exercitationem quos dignissimos vel delectus placeat molestias ex aut impedit.</p>
+                        <a href="How it works.html" class="learn-more anim">Learn More...</a>
+                        
+                    </div>
+                    <div class="image-section">
+                        <div class="main-image">
+                            <img src="/images/os-dining-philosophers-problem (1)-Photoroom.png" class="anim" style="width: 400px;height: auto;">
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </main>
+    </body>
+</html>
